--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Times New Roman, serif;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -18,7 +18,6 @@ header {
     top: 0;
     left: 0;
     right: 0;
-
 }
 
 header h1 {
@@ -87,7 +86,15 @@ button {
 
 button:hover {
     background: black;
+    border: 2px solid black;
     color: white;
+}
+
+header a:hover, nav a:hover{
+    background: black;
+    color: white;
+    border-radius: 18px;
+    padding: 1.2vh 1.2vw;
 }
 
 .skills {
